    Mechanize::Page::Image various img element attribute accessors, #caption,
    #extname, #mime_type and #fetch.  Pull request #173 by kitamomonga
  * Added MIME type parsing for content-types in Mechanize::PluggableParser
    for fine-grained parser choices.  Parsers will be chosen based on exact
    match, simplified type or media type in that order.  See
    Mechanize::PluggableParser#[]=.

* Bug fixes
  * Fixed handling of a HEAD request with Accept-Encoding: gzip.  Issue #198
    by Oleg Dashevskii

=== 2.1.1 / 2012-02-03

* Bug fixes
  * Set missing idle_timeout default.  Issue #196
  * Meta refresh URIs are now escaped (excluding %).  Issue #177
  * Fix charset name extraction.  Issue #180
  * A Referer URI sent on request no longer includes user information
    or fragment part.
  * Tempfiles for storing response bodies are unlinked upon creation to avoid
    possible lack of finalization.  Issue #183
  * The default maximum history size is now 50 pages to avoid filling up a
    disk with tempfiles accidentally.  Related to Issue #183
  * Errors in bodies with deflate and gzip responses now result in a
    Mechanize::Error instead of silently being ignored and causing future
    errors.  Issue #185
  * Mechanize now raises an UnauthorizedError instead of crashing when a 403
    response does not contain a www-authenticate header.  Issue #181
  * Mechanize gives a useful exception when attempting to click buttons across
    pages.  Issue #186
  * Added note to Mechanize#cert_store describing how to add certificates in
    case your system does not come with a default set.  Issue #179
  * Invalid content-disposition headers are now ignored.  Issue #191
  * Fix NTLM by recognizing the "Negotiation" challenge instead of endlessly
    looping.  Issue #192
  * Allow specification of the NTLM domain through Mechanize#auth.  Issue #193
  * Documented how to convert a Mechanize::ResponseReadError into a File or