@@ -13,6 +13,8 @@
     for fine-grained parser choices.  Parsers will be chosen based on exact
     match, simplified type or media type in that order.  See
     Mechanize::PluggableParser#[]=.
+  * Added Mechanize#download which downloads a response body to an IO-like or
+    filename.
 
 * Bug fixes
   * Fixed handling of a HEAD request with Accept-Encoding: gzip.  Issue #198
